--- a/SATSTrainingApp/app/src/main/res/values/strings.xml
+++ b/SATSTrainingApp/app/src/main/res/values/strings.xml
@@ -1,6 +1,9 @@
 <resources>
     <string name="app_name">SATSTrainingApp</string>
 
-    <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="refresh">refresh</string>
+    <string name="action_menu">action_menu</string>
+    <string name="sats_logo">sats_logo</string>
+    <string name="Avboka">Avboka</string>
 </resources>
