--- a/SATSTrainingApp/app/src/main/res/values/strings.xml
+++ b/SATSTrainingApp/app/src/main/res/values/strings.xml
@@ -5,5 +5,5 @@
     <string name="refresh">refresh</string>
     <string name="action_menu">action_menu</string>
     <string name="sats_logo">sats_logo</string>
-    <string name="Avboka">Avboka</string>
+    <string name="button_cancel">Avboka</string>
 </resources>
